--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -19,9 +19,6 @@
     --scroll-bar-color: #c5cadf;
     --scroll-thumb-color: #70768a;
     --scroll-thumb-hover-color: #454f6b;
-
-
-
 }
 
 * {
@@ -60,6 +57,11 @@ header {
     transition: .6s ease;
 }
 
+header .sticky{
+    background: rgb(255,255,255,0.1);
+    box-shadow: var(--box-shadow);
+}
+
 .nav-bar {
     position: relative;
     height: calc(4rem+1rem);
@@ -72,6 +74,26 @@ header {
     padding: 0 20px;
     transition: .6s ease;
 }
+
+header .sticky .nav-bar{
+    height: calc(2.5rem+1rem);
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+    background: var(--scroll-bar-color);
+}
+
+::-webkit-scrollbar-thumb{
+    background: var(--scroll-thumb-color);
+    border-radius: 2em;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: var(--scroll-thumb-hover-color);
+}
+
+
 
 .nav-bar .logo {
     color: var(--first-color);
@@ -198,3 +220,156 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+.section{
+    position: relative;
+    width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 6rem 2rem 2rem;
+}
+
+.sub-section{
+    position: relative;
+    width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 6rem 0;
+}
+
+.section-title-01{
+    font-size: 4.5em;
+    font-weight: 800;
+    margin-bottom: 2rem;
+    background:linear-gradient(to top, transparent 0% , var(--first-color) 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: .1;
+
+}
+
+.section-title-02{
+    font-size: 2em;
+    font-weight: 700;
+    transform: translate(-80px);
+}
+
+.section-title-02:before{
+    content: '';
+    position: absolute;
+    width: 70px;
+    height: 5px;
+    right: 0;
+    bottom: 0;
+    background: var(--second-color);
+
+}
+
+.container{
+    position: relative;
+    flex-direction: column;
+}
+
+.about .container .content{
+    column-gap: 40px;
+    width: 100%;
+}
+
+.about-img{
+    position: relative;
+
+}
+
+.about-img img{
+    max-width: 100%;
+    min-width: 500px;
+    border-radius: 10px;
+}
+
+.about-info .description{
+    max-width: 600px;
+
+}
+
+.about-info .description h3{
+    font-size: 2em;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.about-info .description h4{
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.about-info .description h4 span{
+    color: var(--second-color);
+}
+
+.about-info .description p{
+    color: var(--third-color);
+    font-size: var(--normal-font-size);
+    margin-bottom: 15px;
+    padding-bottom: 25px;
+    border-bottom: 2px solid var(--line-color);
+}
+
+.about-info .professional-list .list-item h3{
+    font-size: 2.5em;
+    font-weight: 700;
+}
+
+.about-info .professional-list .list-item span{
+    color: var(--third-color);
+    font-size: var(--samll-font-size);
+}
+
+.skills .container .content{
+    width: 100%;
+}
+
+.skills-description{
+    max-width: 700px;
+    margin-bottom: 50px;
+}
+
+.skills-description h3{
+    font-size: 2em;
+    margin-bottom: 5px;
+}
+.skills-info{
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px , 1fr));
+    gap: 20px;
+    margin: 0 auto;
+}
+
+.skills-info h4{
+    margin-bottom: 20px;
+}
+
+.skills-info h4 label{ 
+    background: var(--second-color);
+    color: #fff;
+    font-size: var(--normal-font-size);
+    font-weight: 400;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+
+.education-all{
+    margin-bottom: 80px;
+}
+
+.edu-list .item{
+    background: var(--card-bg-color);
+    box-shadow: var(--box-shadow);
+    border-bottom: 3px solid var(--second-color);
+    padding: 20px;
+    margin-top: 15px;
+    border-radius: 6px;
+    transition: .3s ease;
+}
+
